--- a/index.html
+++ b/index.html
@@ -1,36 +1,2 @@
 <h1>Hello! And welcome to my game website.</h1>
-/* Keyword values */
-background-color: red;
-background-color: indigo;
-
-/* Hexadecimal value */
-background-color: #bbff00; /* Fully opaque */
-background-color: #bf0; /* Fully opaque shorthand */
-background-color: #11ffee00; /* Fully transparent */
-background-color: #1fe0; /* Fully transparent shorthand */
-background-color: #11ffeeff; /* Fully opaque */
-background-color: #1fef; /* Fully opaque shorthand */
-
-/* RGB value */
-background-color: rgb(255, 255, 128); /* Fully opaque */
-background-color: rgba(117, 190, 218, 0.5); /* 50% transparent */
-
-/* HSL value */
-background-color: hsl(50, 33%, 25%); /* Fully opaque */
-background-color: hsla(
-  50,
-  33%,
-  25%,
-  0.75
-); /* 75% opaque, i.e. 25% transparent */
-
-/* Special keyword values */
-background-color: currentcolor;
-background-color: transparent;
-
-/* Global values */
-background-color: inherit;
-background-color: initial;
-background-color: revert;
-background-color: revert-layer;
-background-color: unset;
+<h1>yohoho.io</h1>
